traces/bug_825.txt
examples++-load/tetgen.cpp:2126: error: DEAD_STORE
  The value written to &m (type Fem2D::Mesh3*) is never used.
Showing all 1 steps of the trace


examples++-load/tetgen.cpp:2126:5: Write of unused value
2124.       ffassert( pTh );
2125.       Mesh3 &Th=*pTh;
2126.       Mesh3 *m= pTh;   // question a quoi sert *m ??
            ^
2127.       int nbv=Th.nv; // nombre de sommet
2128.       int nbt=Th.nt; // nombre de triangles
